Preparation for supporting GitHub Actions.  Updates for Ansible v13 (core 2.20) (#39)
Prepare for enabling github actions. Plan is to use the `docs/EXAMPLE` directory to run the tests, passing in variables and secrets, either via command-line or environment, as needed. Anchors/aliases need to be removed as they cannot be passed to Ansible on the command line or Environment:
+ `dns_nameserver_zone`: The only reason there is an alias here it to append it to `dns_user_domain`.  We change the logic here to replace `dns_user_domain` with `dns_subdomain`, which no longer includes the `dns_nameserver_zone` apex domain.  Also means inverting the logic in the DNS handling logic, but is actually more intuitive (previously, we had to remove `dns_nameserver_zone` from `dns_user_domain`, now we add it to `dns_subdomain` where needed, instead).  
  + **This is a breaking change.**  Users' `cluster_vars.dns_user_domain` will need to be changed to `cluster_vars.dns_subdomain`, and the concatenation with `dns_nameserver_zone` removed accordingly.  See `docs/EXAMPLE/cluster_defs/aws/cluster_vars__cloud.yml`
+ gcp_service_account_rawfile: This is now by default gathered from the environment `GCP_SERVICE_ACCOUNT_CONTENTS`, so all the logic is preserved. Rename `gcp_service_account_rawtext` to `gcp_service_account_contents` for consistency (internal change only).
+ All the vaulted EXAMPLE variables (which were non-functional placeholders) have to be removed (they get parsed before the command-line override, so playbook fails).
+ Allow Azure credentials to be passed via Environment vars (make the auth parameters optional)
+ Update handling of cluster_vars_override:
  + Could not handle newlines necessary for passing SSH key on command line/Environment.
  + Use simpler merging the cluster_vars_override variables (remove the `to_yaml`, which was responsible for stripping the `\n`)
  + Also need to fix the now less-escaped argv values when re-passing to command-line for redeploy via dseeley

--- a/roles/config/tasks/main.yml
+++ b/roles/config/tasks/main.yml
@@ -30,13 +30,13 @@
         - /var/lib/apt/lists/lock
         - /var/lib/dpkg/lock
         - /var/lib/dpkg/lock-frontend
-  when: ansible_os_family == 'Debian'
+  when: ansible_facts['os_family'] == 'Debian'
 
 - name: config | Run cloud-specific config (if defined)
   include_tasks: "{{ item__include_tasks }}"
   loop: "{{ query('first_found', params) }}"
   loop_control: { loop_var: item__include_tasks }   #This mechanism (to include_tasks only when the file exists), also creates a loop iterator 'item' that it sends to the included tasks.  If they also have loops, we get "The loop variable 'item' is already in use" warning.
-  vars: { params: { files: ["config_{{cluster_vars.type}}.yml"], skip: true } }
+  vars: { params: { files: ["config_{{cluster_vars.cloud_type}}.yml"], skip: true } }
 
 - name: config | Disable requiretty in sudoers to enable pipelining
   become: true
@@ -52,8 +52,8 @@
   become: true
   lineinfile:
     path: /etc/hosts
-    regexp: '^{{ansible_default_ipv4.address}}'
-    line: "{{ansible_default_ipv4.address}} {{inventory_hostname + '.' + cluster_vars.dns_user_domain if (cluster_vars.dns_user_domain is truthy) else ''}} {{inventory_hostname}}"
+    regexp: '^{{ansible_facts.default_ipv4.address}}'
+    line: "{{ansible_facts.default_ipv4.address}} {{inventory_hostname + ('.' + cluster_vars.dns_subdomain if cluster_vars.dns_subdomain else '') + '.' + cluster_vars.dns_nameserver_zone if (cluster_vars.dns_nameserver_zone is truthy) else ''}} {{inventory_hostname}}"
 #    regexp: '^127\.0\.1\.1'
 #    line: '127.0.1.1 {{inventory_hostname}}'
     insertbefore: "BOF"
@@ -68,11 +68,11 @@
 
 - name: config | Create partition table, format and attach volumes - AWS, GCP or Azure
   include_tasks: disks_auto_cloud.yml
-  when: cluster_vars.type in ["aws", "gcp", "azure", "libvirt"]
+  when: cluster_vars.cloud_type in ["aws", "gcp", "azure", "libvirt"]
 
 - name: config | Create partition table, format and attach volumes - generic
   include_tasks: disks_auto_generic.yml
-  when: cluster_vars.type not in ["aws", "gcp", "azure", "libvirt"]
+  when: cluster_vars.cloud_type not in ["aws", "gcp", "azure", "libvirt"]
 
 - name: config | only install chrony if NTP is not installed already (Ubuntu>20.04 already either install Chrony or systemd-timesyncd)
   block:
@@ -99,4 +99,4 @@
 
 - name: config | create DNS A records
   include_tasks: create_dns_a.yml
-  when: (cluster_vars.dns_server is truthy) and (cluster_vars.dns_user_domain is truthy)
+  when: (cluster_vars.dns_server is truthy) and (cluster_vars.dns_nameserver_zone is truthy)
