--- a/docs/EXAMPLE/cluster_defs/azure/cluster_vars__cloud.yml
+++ b/docs/EXAMPLE/cluster_defs/azure/cluster_vars__cloud.yml
@@ -15,12 +15,12 @@ _alma8image: { "publisher": "almalinux", "offer": "almalinux", "sku": "8_5-gen2"
 
 cluster_vars:
   image: "{{_ubuntu2404image}}"
-  dns_cloud_internal_domain: "ACCOUNTNAME_CHANGEME.onmicrosoft.com"       # The cloud-internal zone as defined by the cloud provider (e.g. GCP, AWS)
-  dns_nameserver_zone: &dns_nameserver_zone ""                            # The zone that dns_server will operate on.  gcloud dns needs a trailing '.'.  Leave blank if no external DNS (use IPs only)
-  dns_user_domain: "{%- if _dns_nameserver_zone is truthy -%}{{cloud_type}}-{{region}}.{{buildenv}}.{{_dns_nameserver_zone}}{%- endif -%}"         # A user-defined _domain_ part of the FDQN, (if more prefixes are required before the dns_nameserver_zone)
+  dns_cloud_internal_domain: "ACCOUNTNAME_CHANGEME.onmicrosoft.com"      # The cloud-internal zone as defined by the cloud provider (e.g. GCP, AWS)
+  dns_nameserver_zone: ""                                     # The apex zone that dns_server will operate on.  gcloud dns needs a trailing '.'.  Leave blank if no external DNS (use IPs only)
+  dns_subdomain: "{{cloud_type}}-{{region}}.{{buildenv}}"     # A user-defined subdomain part of the FDQN, (e.g. if more labels are required before the dns_nameserver_zone)
   dns_server: ""                                              # Specify DNS server. nsupdate, route53 or clouddns.  If empty string is specified, no DNS will be added.
-  assign_public_ip: false                                     # Whether a 'dynamic' (will change on stop/start), 'static' (e.g. elastic IP), or no public IP should be assigned.   NOTE: for Azure 'Standard' instance types, only static IPs are supported
-  inventory_ip: "private"                                     # 'public' or 'private', (private in case we're operating in a private LAN).  If public, 'assign_public_ip' must be 'static' or 'dynamic'
+  assign_public_ip: "static"                                  # Whether a 'dynamic' (will change on stop/start), 'static' (e.g. elastic IP), or no public IP should be assigned.   NOTE: for Azure 'Standard' instance types, only static IPs are supported
+  inventory_ip: "public"                                      # 'public' or 'private', (private in case we're operating in a private LAN).  If public, 'assign_public_ip' must be 'static' or 'dynamic'
   user_data: |-
     #cloud-config
     system_info:
@@ -32,5 +32,3 @@ cluster_vars:
       protocol: "Tcp"
       destination_port_range: ["22"]
       source_address_prefix: "{{ssh_whitelist}}"
-
-_dns_nameserver_zone: *dns_nameserver_zone
