--- a/roles/config/tasks/disks_auto_cloud.yml
+++ b/roles/config/tasks/disks_auto_cloud.yml
@@ -10,7 +10,7 @@
 
     - name: config/disks_auto_cloud | Get the block device information (pre-filesystem create)
       dseeley.blockdevmap.blockdevmap:
-        cloud_type: "{{cluster_vars.type}}"
+        cloud_type: "{{cluster_vars.cloud_type}}"
       become: true
       register: r__blockdevmap
 
@@ -29,7 +29,7 @@
 
     - name: config/disks_auto_cloud | Get the block device information (post-filesystem create), to get the block IDs for mounting
       dseeley.blockdevmap.blockdevmap:
-        cloud_type: "{{cluster_vars.type}}"
+        cloud_type: "{{cluster_vars.cloud_type}}"
       become: true
       register: r__blockdevmap
 
@@ -46,8 +46,18 @@
         opts: _netdev
       loop: "{{auto_vols}}"
       vars:
-        _UUID: "{{ r__blockdevmap.device_map | json_query(\"[?device_name_cloud == '\" + item.device_name + \"' && TYPE=='disk' && parttable_type=='' && MOUNTPOINT==''].UUID | [0]\") }}"
+        _UUID: "{{ r__blockdevmap.device_map | json_query(\"[?device_name_cloud == '\" + item.device_name + \"' && TYPE=='disk'].UUID | [0]\") }}"
       when: _UUID is truthy
+      register: r__mount
+
+    - name: config/disks_auto_cloud | debug r__mount
+      debug: msg={{r__mount}}
+
+    - name: config/disks_auto_cloud | Ensure no volumes skipped mounting
+      ansible.builtin.assert:
+        that: "r__mount.results | json_query(\"[?skipped == `true`]\") | length == 0"
+        fail_msg: "Failed to mount: {{ r__mount.results | json_query(\"[?skipped==`true`].item.device_name\") | join(', ') }}"
+        success_msg: "All volume mounts successfully processed (none skipped)."
 
     - name: config/disks_auto_cloud | change ownership of mountpoint (if set)
       become: true
@@ -64,7 +74,7 @@
         - name: "config/disks_auto_cloud | Touch a file with the mountpoint and device name for testing that disk attachment is correct.  Note: Use a unique filename here instead of writing to a file, so that more than one file per device is an error.  Note: don't add device_name for GCP, because we can't rename the disks when redeploying and keeping disks (_scheme_rmvm_keepdisk_rollback)"
           become: true
           file:
-            path: "{{item.mountpoint}}/.clusterverse_volplacement_test__{{inventory_hostname | regex_replace('-(?!.*-).*')}}__{{ item.mountpoint | regex_replace('\\/', '_') }}{%- if cluster_vars.type != 'gcp'-%}__{{ item.device_name | regex_replace('\/', '_') }}{%- endif -%}"
+            path: "{{item.mountpoint}}/.clusterverse_volplacement_test__{{inventory_hostname | regex_replace('-(?!.*-).*')}}__{{ item.mountpoint | regex_replace('\\/', '_') }}{%- if cluster_vars.cloud_type != 'gcp'-%}__{{ item.device_name | regex_replace('\/', '_') }}{%- endif -%}"
             state: touch
           loop: "{{auto_vols}}"
 
@@ -84,7 +94,7 @@
 
             - name: config/disks_auto_cloud | assert that only one device descriptor file exists per disk (otherwise, indicates that this run has mapped either more than one device per mount, or a different one to previous)
               assert:
-#                that: testdevicedescriptor | json_query('[?length(files) != `1`]')      #Note: This SHOULD also work, and is more intuitive.  Broken in v2.19 for some reason.
+                #                that: testdevicedescriptor | json_query('[?length(files) != `1`]')      #Note: This SHOULD also work, and is more intuitive.  Broken in v2.19 for some reason.
                 that: testdevicedescriptor | map(attribute='files') | map('length') | select('ne', 1) | length == 0
                 fail_msg: "ERROR - Exactly one file should exist per storage device. [{{ testdevicedescriptor }}]"
           vars:
@@ -106,18 +116,18 @@
       apt:
         update_cache: true
         name: "lvm2"
-      when: ansible_os_family == 'Debian'
+      when: ansible_facts['os_family'] == 'Debian'
 
     - name: config/disks_auto_cloud/lvm | Install logical volume management tooling. (yum - RedHat/CentOS)
       become: true
       yum:
         name: "lvm*"
         state: present
-      when: ansible_os_family == 'RedHat'
+      when: ansible_facts['os_family'] == 'RedHat'
 
     - name: config/disks_auto_cloud/lvm | Get the device information (pre-filesystem create)
       dseeley.blockdevmap.blockdevmap:
-        cloud_type: "{{cluster_vars.type}}"
+        cloud_type: "{{cluster_vars.cloud_type}}"
       become: true
       register: r__blockdevmap
 
