--- a/roles/redeploy/_scheme_rmvm_keepdisk_rollback/tasks/by_hosttype_by_host.yml
+++ b/roles/redeploy/_scheme_rmvm_keepdisk_rollback/tasks/by_hosttype_by_host.yml
@@ -15,7 +15,7 @@
     - name: by_hosttype_by_host | Power off old VM
       include_role:
         name: clusterverse.clusterverse.redeploy.__common
-        tasks_from: "powerchange_vms_{{cluster_vars.type}}.yml"
+        tasks_from: "powerchange_vms_{{cluster_vars.cloud_type}}.yml"
       vars:
         hosts_to_powerchange: "{{ hosts_to_change }}"
         powerchange_new_state: "stop"
@@ -26,14 +26,14 @@
 - name: by_hosttype_by_host | Power on rescued VM (hosts_to_powerchange will be empty for normal redeploy, but not in rescue case)
   include_role:
     name: clusterverse.clusterverse.redeploy.__common
-    tasks_from: "powerchange_vms_{{cluster_vars.type}}.yml"
+    tasks_from: "powerchange_vms_{{cluster_vars.cloud_type}}.yml"
   vars:
     hosts_to_powerchange: "{{ cluster_hosts_state | selectattr('name', '==', host_to_redeploy.hostname) | selectattr('tagslabels.cv__lifecycle_state', '==', 'current') | selectattr('instance_state', '==', 'stopped') | list }}"
     powerchange_new_state: "start"
 
-- name: "by_hosttype_by_host | Run {{mainclusteryml}} to add {{host_to_redeploy.hostname}} to cluster"
+- name: "by_hosttype_by_host | Run {{mainclusteryml}} to add {{host_to_redeploy.hostname}} to cluster.  Note: If an argv tuple value starts with '{', or contains '={', surround it with single quotes to preserve as dict when re-parsed"
   dseeley.nested_playbook.nested_playbook:
-    playbook_cmdline: "{{ (ansible_facts.argv[1:] | join(' ')) | regex_replace('redeploy.yml', mainclusteryml) }} -e cluster_suffix={{cluster_suffix}} -e '{'cluster_hosts_target': [{{host_to_redeploy | to_json}}]}' {{ redeploy_extra_vars | default({}) | clusterverse.clusterverse.extravars_from_dict }}"
+    playbook_cmdline: "{{ (ansible_facts.argv[1:] | map('regex_replace', '(^|=)(\\{.*\\})$', \"\\1'\\2'\" ) | join(' ')) | regex_replace('redeploy.yml', mainclusteryml) }} -e cluster_suffix={{cluster_suffix}} -e '{'cluster_hosts_target': [{{host_to_redeploy | to_json}}]}' {{ redeploy_extra_vars | default({}) | clusterverse.clusterverse.extravars_from_dict }}"
 
 - name: by_hosttype_by_host | re-acquire the dynamic inventory (includes cluster_hosts_state)
   include_role:
