--- a/roles/redeploy/_scheme_rmvm_rmdisk_only/tasks/by_hosttype_by_host.yml
+++ b/roles/redeploy/_scheme_rmvm_rmdisk_only/tasks/by_hosttype_by_host.yml
@@ -12,14 +12,14 @@
 - name: clean host
   include_role:
     name: clusterverse.clusterverse.clean
-    tasks_from: "{{cluster_vars.type}}.yml"
+    tasks_from: "{{cluster_vars.cloud_type}}.yml"
   when: (hosts_to_clean | length > 0)
   vars:
     hosts_to_clean: "{{ [host_to_del] }}"
 
-- name: "Run {{mainclusteryml}} to fix cluster"
+- name: "Run {{mainclusteryml}} to fix cluster.  Note: If an argv tuple value starts with '{', or contains '={', surround it with single quotes to preserve as dict when re-parsed"
   dseeley.nested_playbook.nested_playbook:
-    playbook_cmdline: "{{ (ansible_facts.argv[1:] | join(' ')) | regex_replace('redeploy.yml', mainclusteryml) }} -e cluster_suffix={{cluster_suffix}} {{ redeploy_extra_vars | default({}) | clusterverse.clusterverse.extravars_from_dict }}"
+    playbook_cmdline: "{{ (ansible_facts.argv[1:] | map('regex_replace', '(^|=)(\\{.*\\})$', \"\\1'\\2'\" ) | join(' ')) | regex_replace('redeploy.yml', mainclusteryml) }} -e cluster_suffix={{cluster_suffix}} {{ redeploy_extra_vars | default({}) | clusterverse.clusterverse.extravars_from_dict }}"
 
 - name: re-acquire the dynamic inventory (includes cluster_hosts_state)
   include_role:
