exclude assertion for GCP.  Can't be fixed easily because we can't change the disk name

--- a/roles/cluster_hosts/tasks/get_cluster_hosts_target.yml
+++ b/roles/cluster_hosts/tasks/get_cluster_hosts_target.yml
@@ -56,7 +56,7 @@
   vars: { params: { files: ["get_cluster_hosts_target_{{cluster_vars.cloud_type}}.yml"], skip: true } }
 
 
-- name: get_cluster_hosts_target | cluster_hosts_target
+- name: get_cluster_hosts_target | cluster_hosts_target after cloud-specific augmentation
   debug: msg={{cluster_hosts_target}}
   delegate_to: localhost
   run_once: true
