--- a/roles/config/tasks/disks_auto_cloud.yml
+++ b/roles/config/tasks/disks_auto_cloud.yml
@@ -53,11 +53,12 @@
     - name: config/disks_auto_cloud | debug r__mount
       debug: msg={{r__mount}}
 
-    - name: config/disks_auto_cloud | Ensure no volumes skipped mounting
+    - name: config/disks_auto_cloud | Ensure no volumes skipped mounting (we can't test this with GCP, because moving disks using the _scheme_rmvm_keepdisk_rollback redeploy scheme means that the 'device_name_cloud==item.device_name' test above will fail, so we can't find the UUID to mount and it is skipped, even though it is actually mounted correctly)
       ansible.builtin.assert:
         that: "r__mount.results | json_query(\"[?skipped == `true`]\") | length == 0"
         fail_msg: "Failed to mount: {{ r__mount.results | json_query(\"[?skipped==`true`].item.device_name\") | join(', ') }}"
         success_msg: "All volume mounts successfully processed (none skipped)."
+      when: cluster_vars.cloud_type != 'gcp'
 
     - name: config/disks_auto_cloud | change ownership of mountpoint (if set)
       become: true
@@ -169,12 +170,12 @@
             opts: _netdev
           register: r__mount
 
-        - name: config/disks_auto_cloud | debug r__mount
+        - name: config/disks_auto_cloud/lvm | debug r__mount
           debug: msg={{r__mount}}
 
-        - name: config/disks_auto_cloud | Ensure no volumes skipped mounting
+        - name: config/disks_auto_cloud/lvm | Ensure no volumes skipped mounting
           ansible.builtin.assert:
-            that: "'skipped' not in r__mount"
+            that: "'skipped' not in r__mount or r__mount.skipped != true"
             fail_msg: "Failed to mount: {{ r__mount.name }}"
             success_msg: "All volume mounts successfully processed (none skipped)."
 
