Add new computed variable `cluster_vars.dns_domain`, which is set to {{cluster_vars.dns_subdomain}}.{{cluster_vars.dns_nameserver_zone}}.
Simplifies any logic that requires creating fqdn.
Had to remove ansible.utils.to_paths in favour of json_query due to incompatibility in _dependencies/tasks/main.yml (merge_vars limitation)
Stop creating inventory file in the playbook directory.

--- a/docs/EXAMPLE/cluster_defs/aws/eu-west-1/dev/cluster_vars__buildenv.yml
+++ b/docs/EXAMPLE/cluster_defs/aws/eu-west-1/dev/cluster_vars__buildenv.yml
@@ -31,8 +31,8 @@ cluster_vars:
       sysdisks2:
         auto_volumes:
           - { device_name: "/dev/sda1", mountpoint: "/", fstype: "ext4", volume_type: "gp3", volume_size: 8, encrypted: true, delete_on_termination: true }
-          - { device_name: "/dev/sdf", mountpoint: "/media/mysvc", fstype: "ext4", volume_type: "gp3", volume_size: 1, encrypted: true, delete_on_termination: true, perms: { owner: "root", group: "root", mode: '0775' } }
-          - { device_name: "/dev/sdg", mountpoint: "/media/mysvc2", fstype: "ext4", opts: "noatime", volume_type: "gp3", volume_size: 1, iops: 3000, encrypted: true, delete_on_termination: true }
+          - { device_name: "/dev/sdf", mountpoint: "/media/mysvc", fstype: "xfs", volume_type: "gp3", volume_size: 1, encrypted: true, delete_on_termination: true, perms: { owner: "root", group: "root", mode: '0775' } }
+          - { device_name: "/dev/sdg", mountpoint: "/media/mysvc2", fstype: "xfs", opts: "noatime", volume_type: "gp3", volume_size: 1, iops: 3000, encrypted: true, delete_on_termination: true }
         flavor: t3a.nano
         version: "{{sysdisks_version | default('')}}"
         vms_by_az: { a: 1, b: 1, c: 0 }
