--- a/roles/config/tasks/create_dns_a.yml
+++ b/roles/config/tasks/create_dns_a.yml
@@ -38,7 +38,7 @@
         session_token: "{{cluster_vars[buildenv].aws_session_token | default(omit)}}"
         state: present
         zone: "{{cluster_vars.dns_nameserver_zone}}"
-        record: "{{item.hostname + ('.' + cluster_vars.dns_subdomain if cluster_vars.dns_subdomain else '') + '.' + cluster_vars.dns_nameserver_zone}}"
+        record: "{{item.hostname}}.{{cluster_vars.dns_domain}}"
         type: A
         ttl: 60
         value: "{{ item.ipv4 }}"
@@ -86,7 +86,7 @@
             session_token: "{{cluster_vars[buildenv].aws_session_token | default(omit)}}"
             state: present
             zone: "{{cluster_vars.dns_nameserver_zone}}"
-            record: "{{item.item.item.hostname + ('.' + cluster_vars.dns_subdomain if cluster_vars.dns_subdomain else '') + '.' + cluster_vars.dns_nameserver_zone}}"
+            record: "{{item.item.item.hostname}}.{{cluster_vars.dns_domain}}"
             type: A
             ttl: 60
             value: "{{item.item.item.ipv4}}"
@@ -117,7 +117,7 @@
         auth_kind: "serviceaccount"
         service_account_contents: "{{cluster_vars[buildenv].gcp_service_account_contents}}"
         project: "{{ cluster_vars[buildenv].vpc_host_project_id or cluster_vars[buildenv].vpc_project_id }}"    # Use the shared vpc host project if defined, else use the vpc project
-        name: "{{item.0.hostname + ('.' + cluster_vars.dns_subdomain if cluster_vars.dns_subdomain else '') + '.' + cluster_vars.dns_nameserver_zone}}"
+        name: "{{item.0.hostname}}.{{cluster_vars.dns_domain}}"
         managed_zone:
           name: "{{item.1.name}}"
           dnsName: "{{item.1.dnsName}}"
@@ -158,7 +158,7 @@
       delay: 10
       with_items: "{{ cluster_hosts_target }}"
       vars:
-        new_fqdn: "{{item.hostname + ('.' + cluster_vars.dns_subdomain if cluster_vars.dns_subdomain else '') + '.' + (cluster_vars.dns_nameserver_zone | regex_replace('^(.*?)\\.?$','\\1')) }}."      # Add a '.' to the fadn, (but only if there's not one already)
+        new_fqdn: "{{item.hostname}}.{{cluster_vars.dns_domain | regex_replace('^(.*?)\\.?$','\\1')}}."      # Add a '.' to the fadn, (but only if there's not one already)
         new_ip: "{{hostvars[item.hostname].ansible_host}}"
       become: false
       run_once: true
