Add new computed variable `cluster_vars.dns_domain`, add explicit xfs support, reinstate _netdev mount option, import python39_install.yml if needed, assert on buildenv
* Add new computed variable `cluster_vars.dns_domain`, which is set to {{cluster_vars.dns_subdomain}}.{{cluster_vars.dns_nameserver_zone}}.
+ Simplifies any logic that requires creating fqdn.
+ Had to remove ansible.utils.to_paths in favour of json_query due to incompatibility in _dependencies/tasks/main.yml (merge_vars limitation)

* Stop creating inventory file in the playbook directory.

* Reinstate _netdev as a mandatory mount option, so that the blockdevmap function is guaranteed to find cloud block (e.g. EBS) devices (which are often network attached).

--- a/roles/_dependencies/tasks/main.yml
+++ b/roles/_dependencies/tasks/main.yml
@@ -17,7 +17,7 @@
 
     - name: Ensure the mandatory cluster_vars are defined
       merge_vars:
-        literals: "{{ cluster_vars__mandatory | ansible.utils.to_paths(prepend='cluster_vars') | dict2items(key_name='path', value_name='value') }}"
+        literals: "{{ cluster_vars__mandatory | dict2items(key_name='path', value_name='value') | json_query(\"[].{path: join('.', ['cluster_vars', path]), value: value}\") }}"
 
     - name: Gather CLI facts
       cli_facts:
@@ -43,6 +43,8 @@
       merge_vars:
         literals: "{{ cluster_vars_override | from_yaml | dict2items(key_name='path', value_name='value') | to_json | from_json | json_query(\"[].{path: join('.', ['cluster_vars', path]), value: value}\") }}"
       when: cluster_vars is defined and cluster_vars_override is defined and cluster_vars_override != ''
+
+    - assert: { that: "cluster_vars[buildenv] is defined", fail_msg: "Please ensure the '{{buildenv}}' buildenv is defined in cluster_vars" }
 
     - name: debug Combine command-line cluster_vars_override into the loaded cluster_vars
       debug: msg="{{cluster_vars}}"
